# kundeanalyse-test

./: .gitignore  README.md  customer_churn_demo.py  index.html  pyproject.toml
.github/workflows/: deploy-pages.yml
docs/: marimo_apps_guide.html
layouts/: customer_churn_demo.grid.json  customer_churn_demo.slides.json
scripts/: build-gh-pages.sh  publish-gh-pages.sh
